DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2012-02-04 patrick     Replaced the VPR DLL import/export macros with VPR_API.
2011-10-09 patrick     Fixed mishandling of the value returned by
                       FreeLibrary().
2011-04-04 patrick     Fixed DNS lookup problems when IPv5 is enabled on
                       Windows.
                       Submitted by Jeff Baker
2011-04-04 patrick     Fixed networking issues when using Boost.Asio.
                       Submitted by Jeff Baker
2011-03-19 patrick     Added support for Boost.Filesystem v3.
                       Submitted by Doug McCorkle.
                       NEW VERSION: 2.3.4
2011-02-13 patrick     Removed the simulated sockets code.
                       NEW VERSION: 2.3.3
2010-07-20 patrick     Added vpr::SignalProxy<T>.
                       NEW VERSION: 2.3.2
2010-07-12 patrick     Added vpr::Interval::NullInterval.
                       NEW VERSION: 2.3.1
2010-06-19 patrick     VR Juggler 3.0 branch created.
                       NEW VERSION: 2.3.0